<resources>
    <string name="app_name">MusicGo</string>
    <string name="recent_songs">Recent songs</string>
    <string name="cover_image">Image of the song</string>
    <string name="delete">Delete</string>
    <string name="options">Options</string>
    <string name="login_username_title">Email</string>
    <string name="login_password_title">Password</string>
    <string name="login_btn">Login</string>
    <string name="logo_description" translatable="false">MusicGo logo</string>
    <string name="login_or_tv">or</string>
    <string name="Surname">Surname</string>
    <string name="Email">Email</string>
    <string name="CreateAccountSignUp">Create account</string>
    <string name="login_create_account_btn">Create account</string>
    <string name="previous_song_description">Previous song</string>
    <string name="information_song">Information</string>
    <string name="name">Name</string>
    <string name="Artista">Artist</string>
    <string name="musical_note_description">Musical_note</string>
    <string name="genre_msg">Genre</string>
    <string name="dialog_delete_account_title">Are you sure you want to delete your account?</string>
    <string name="error_delete_account">The account could not be deleted</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="import_playlist_msg">The following shared playlist will be import:</string>
    <string name="configuracion">CONFIGURATION</string>
    <string name="laguage">Language</string>
    <string name="log_out">Log out</string>
    <string name="Log_out_info">Sign out of this device</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_info">Delete your profile in the app</string>
    <string name="Profile">Profile</string>
    <string name="Username">Username</string>
    <string name="play_description">Play Button</string>
    <string name="pause_description">Pause Button</string>
    <string name="stop_description">Stop Button</string>
    <string name="image_description">Image of the song</string>
    <string name="delete_description">Delete</string>
    <string name="options_description">Options</string>
    <string name="canciones_top">TOP SONGS</string>
    <string name="estadisticas">Check your statistics</string>
    <string name="favorite_song">Your favorite song is...</string>
    <string name="favorite_artist">Your favorite artist is...</string>
    <string name="minutes_listened">Your minutes listened are...</string>
    <string name="song_description">"Song icon"</string>
    <string name="profile_description" >Profile icon</string>
    <string name="clock_description">Clock icon</string>
	<string name="new_playlist">New playlist</string>
    <string name="description_playlist">Description</string>
    <string name="playlists">Your playlists</string>
    <string name="playlist_icon_description">Playlist icon</string>
    <string name="previous_playlist_description">Previous playlist</string>
    <string name="next_playlist_description">Next playlist</string>
    <string name="save_on_playlist_menu">Save on playlist</string>
    <string name="share_description">Share</string>
    <string name="dialog_delete_song_from_list">Are you sure you want to delete the song from the playlist?</string>
    <string name="dialog_delete_playlist_menu">Are you sure you want to delete this playlist?</string>
    <string name="descubrir">Discover...</string>
    <string name="discover">Discover</string>
    <string name="artist_msg">ARTIST</string>
    <string name="discover_searchbar">Search artist</string>
    <string name="filter_button">Apply</string>
    <string name="new_comment_title">Post a new comment</string>
    <string name="new_comment_hint">Write a comment</string>
    <string name="yourFavorites">Your favorites</string>
    <string name="stars_description">Star icon</string>
    <string name="signup_username_title">Username</string>
</resources>