<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/custom_toolbar">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_bar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/custom_toolbar">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/explore_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="32dp"
                        android:fontFamily="@font/viga_regular"
                        android:gravity="center"
                        android:text="@string/discover"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/blue"
                        android:textSize="45sp" />

                    <TextView
                        android:id="@+id/genre_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="32dp"
                        android:fontFamily="@font/viga_regular"
                        android:gravity="center"
                        android:text="@string/genre_msg"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/blue"
                        android:textSize="25sp" />

                    <FrameLayout
                        android:id="@+id/fragment_genre_list_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="32dp"
                        android:layout_marginTop="16dp" />

                    <TextView
                        android:id="@+id/artist_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="32dp"
                        android:fontFamily="@font/viga_regular"
                        android:gravity="center"
                        android:text="@string/artist_msg"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/blue"
                        android:textSize="25sp" />

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/searchBar"
                        android:layout_width="260dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/rounded_border"
                        android:iconifiedByDefault="false"
                        app:iconifiedByDefault="false"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:queryHint="@string/discover_searchbar" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_apply_filters"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="32dp"
                        android:background="@drawable/rounded_border"
                        android:backgroundTint="@color/blue"
                        android:paddingHorizontal="16dp"
                        android:text="@string/filter_button"
                        android:textColor="@color/white" />

                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/fragment_song_list_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>

